@@ -1,3 +1,9 @@
+8/22/2003
+	- Changing TXTRecord.getStrings() from returning a List of Strings
+	  to a List of byte []'s was a bad idea.  Change it back, and
+	  add TXTRecord.getStringsAsByteArrays().
+	  (reported by Blake Ramsdell <blake@brutesquadlabs.com>)
+
 8/21/2003
 	- 1.4.0 released.
 
